# google-analytics-cli

./: .gitignore  01_GAP_ANALYSIS.md  02_GENERAL_IMPROVEMENTS.md  03_PUBLISH_PLAN.md  04_SECURITY_CHECKS.md  BLOG_POST.md  CLAUDE.md  GAP_ANALYSIS.md  GA_AUDIT_PLAN.md  IMPLEMENTATION_PLAN.md  PUBLISH_PLAN.md  README.md  TIER2_PLAN.md  TODO_NOTES.md  helpful-resource.md  install.sh  pyproject.toml
.api-snapshots/: analyticsadmin_v1alpha.json  analyticsadmin_v1beta.json  analyticsdata_v1alpha.json  analyticsdata_v1beta.json
.claude/: settings.local.json
.github/workflows/: api-watch.yml  ci.yml  release.yml
archive/: GA_AUDIT_PLAN.md  TODO_NOTES.md
scripts/: check_api_changes.py
src/ga_cli/: __init__.py  main.py
src/ga_cli/api/: client.py
src/ga_cli/auth/: __init__.py  credentials.py  oauth.py  service_account.py
src/ga_cli/commands/: access_bindings.py  access_reports.py  account_summaries.py  accounts.py  (+25 more)
tests/: conftest.py  test_access_bindings.py  test_access_reports.py  test_account_summaries.py  test_accounts.py  test_agent_cmd.py  test_annotations.py  test_api_client.py  test_api_diff.py  test_audiences.py  test_auth_cmd.py  test_bigquery_links.py  test_calculated_metrics.py  test_channel_groups.py  test_completions_cmd.py  test_config_cmd.py  test_credentials.py  test_custom_dimensions.py  test_custom_metrics.py  test_data_retention.py  test_data_streams.py  test_describe.py  test_dry_run.py  test_enhanced_measurement.py  test_errors.py  test_event_create_rules.py  test_event_edit_rules.py  test_filters.py  test_firebase_links.py  test_google_ads_links.py  test_install_script.sh  test_key_events.py  test_mp_secrets.py  test_output.py  test_pagination.py  test_properties.py  test_property_settings.py  test_quiet_nocolor.py  test_reports.py  test_reports_batch.py  (+6 more)
(+9 files in other folders)
